# wartales-trade

./: locations.yaml  main.py  pyproject.toml  trade_goods.yaml
wartales_trade/: location.py  trade_good.py
